remove old shop system + trading post progress